--- a/client/src/components/CardsContainer/CardsContainer.module.css
+++ b/client/src/components/CardsContainer/CardsContainer.module.css
@@ -6,3 +6,9 @@
     flex-wrap: wrap;
     gap: 1em;
 }
+
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; 
+}
