--- a/client/src/components/CardsContainer/CardsContainer.module.css
+++ b/client/src/components/CardsContainer/CardsContainer.module.css
@@ -1,14 +1,64 @@
-.container{
+/*.container{
     border: 1px solid black;
     display: flex;
     flex-direction: row;
     border-radius: 15px;
     flex-wrap: wrap;
     gap: 1em;
-}
+}*/
 
+.contGralPokes{    
+    display: flex; /*con display, justify-content, aling-items -> dejo centrados los filtros*/
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(180deg, #0091ff 0, #008bff 3.33%, #2684ff 6.67%, #697bff 10%, #8e73fd 13.33%, #aa69f1 16.67%, #c15ee3 20%, #d454d4 23.33%, #e349c3 26.67%, #ee3fb2 30%, #f736a0 33.33%, #fd318e 36.67%, #ff317b 40%, #ff3569 43.33%, #fd3d57 46.67%, #f94646 50%, #f25035 53.33%, #ea5a22 56.67%, #e06406 60%, #d46d00 63.33%, #c87600 66.67%, #ba7d00 70%, #ab8400 73.33%, #9b8a00 76.67%, #898f00 80%, #779400 83.33%, #629800 86.67%, #4a9b00 90%, #279e15 93.33%, #00a02e 96.67%, #00a242 100%);
+    height: 100%;
+}
+.contCards{
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    border-radius: 10px;
+}
+/*---FILTROS--------- */
+.contFiltros{
+    background-color: black;
+    width: 95%;     
+    display: flex; /*con display, justify-content, aling-items -> dejo centrados los filtros*/
+    justify-content: center;
+    align-items: center;  
+    border-radius: 10px;
+    
+    margin-top: 20px;
+   
+}    
+.btnFiltro{
+    background-color:rgb(80, 169, 196);
+    border: none;
+    border-radius: 10px;
+    margin: 10px 10px;
+    padding: 5px;
+    color: black;
+    width: auto;
+    
+}
+.selectFiltro{
+    background-color:rgb(80, 169, 196);
+    color: black;
+    border-radius: 5px;
+    width: 150px;
+    margin-left: 5px;
+}
+.btnFiltro:not(select):hover{
+    background-color: rgb(151, 67, 172);
+    color: black;
+}
+/*--------------------------------*/
 .cards{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between; 
+}
+.pag{
+    margin-left: 50px;
 }
