--- a/client/src/components/NotFound/NotFound.module.css
+++ b/client/src/components/NotFound/NotFound.module.css
@@ -1,4 +1,4 @@
-.notfound-cont {     
+.notfoundCont {     
     height: 406px;
 }
 .texto {
@@ -9,7 +9,7 @@
     margin-left: 230px;
     margin-bottom: 0px;
 }
-.gif-dog{    
+.pikachu {    
     width: 50%;
     border-radius: 8px;
     margin-top: 5px;
