--- a/client/src/views/Landing/Landing.module.css
+++ b/client/src/views/Landing/Landing.module.css
@@ -77,7 +77,7 @@
 }
 .innerContainer {
   display: flex;
-  flex-direction: column;
+  /*flex-direction: column;*/
   justify-content: space-around;
   align-items: center;
   z-index: 2;
@@ -102,7 +102,7 @@
   border-color: #35bcdd;;
   background-color: #030704;
   padding: 8px 40px;
-  margin-left: 800px;
+  /*margin-left: 800px;*/
   cursor: pointer;
   border-radius: 8px;
 }
