--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,7 +1,52 @@
-.mainContainer {
+/*.mainContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     border-radius: 15px;
     border: 1px solid black;
+}*/
+.navbar {
+    height: 56px;
+    width: 100%;    
+    background-color: rgb(12, 12, 12);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:  space-between;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+} 
+.navbar nav {
+    height: 100%;
+    
+}
+.lista {
+    margin: 0;
+    margin-right: 10px;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    height: 100%;
+}
+.items {    
+    display: flex;
+    height: 100%;
+    width: auto;
+    align-items: center;
+}
+.items a {
+    color: #35bcdd;
+    height: 100%;
+    padding: 8px 3px;
+    margin-right: 2px;
+    border-bottom: 4px solid transparent;
+}
+.items a:hover,.items a.active {
+    background-color: #35bcdd;
+    color: rgb(7, 4, 4);
+}
+.searchbar {
+    margin-left: 500px;
 }
