--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -6,7 +6,7 @@
     text-decoration: none;
     width: 12rem;
     height: 16rem;
-    background-color: rgb(144,238,144);
+    background-color: #EEEEEE;
     border: 2px solid black ;
     border-radius: 1rem;
 }
