--- a/client/src/components/Pagination/Pagination.module.css
+++ b/client/src/components/Pagination/Pagination.module.css
@@ -1,42 +1,3 @@
-/*.pagination{
-    background: black;
-    width: 95%;    
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.page{
-	width: 40px;
-	padding: 5px;
-	background-color: #35bcdd;
-    color:black;
-	margin: 5px 10px;
-	border: 3px solid;
-	border-radius: 5px;
-    font-weight: bold;
-	
-}
-.pageSelected{
-	width: 30px;
-	padding: 5px;
-	background-color: rgba(138, 236, 231, 0.781);
-    color: rgb(190, 15, 15);
-	margin: 5px 15px;
-	border: 3px solid #35bcdd;
-	border-radius: 5px;
-    font-weight: bold;
-	
-}
-.page:hover {
-    box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.2);
-    background-color: rgba(50, 136, 139, 0.897);
-    -webkit-transform: scale(1.05);
-    transform: scale(1.05);
-    cursor: pointer;
-    border: 2px solid rgb(52, 13, 104);
-
-}*/
 .navigate{
 	width: 60px;
 	padding: 5px;
@@ -71,7 +32,7 @@
     text-decoration: none;
     border: 1px solid white;
     border-radius: 0.3rem;
-    background-color:#5dc1cf;
+    background-color:#EEEEEE;
     text-shadow: 1px 0 0 #fff, -1px 0 0 #fff,
    0 1px 0 #fff, 0 -1px 0 #fff, 1px 1px 0 #fff, -1px -1px 0 #fff,
    -1px 1px 0 #fff, 1px -1px 0 #fff;
@@ -83,7 +44,7 @@
     text-decoration: none;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 0.3rem;
-    background-color:#90ee90;
+    background-color:#EEEEEE;
     color: black;
     text-shadow: 1px 0 0 #fff, -1px 0 0 #fff,
    0 1px 0 #fff, 0 -1px 0 #fff, 1px 1px 0 #fff, -1px -1px 0 #fff,
@@ -91,13 +52,13 @@
 }
 .a:hover{
     transition: background-color .8s;
-    background-color: #5dc1cf;
+    background-color: #dc4f3d;
     color: white;
     border: 1.5px solid white;
 } 
 .a2:hover{
     transition: background-color .8s;
-    background-color: #5dc1cf;
+    background-color: #dc4f3d;
     color: white;
     border: 1.5px solid white;
 }
