--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -1,51 +1,3 @@
-/*.contGralDet{
-    background-color: antiquewhite;
-    background-image: url('../../../src/Assets/Images/fondo-detail2.jpg');
-    background-position:center;
-    background-repeat: no-repeat;
-    background-size: 1277px ;
-    height: 569px;
-}
-.contDetail{
-    width: 55%;
-    height: 300px;
-    margin-left: 270px;    
-    margin-top: 100px;
-    display: flex; /*con display, justify-content, aling-items -> dejo centrados los filtros*/
-    /*justify-content: center;
-    align-items: center; 
-    background-color: rgb(46, 44, 48);
-    border-radius: 20px;
-    border: 3px solid rgb(150, 80, 196);
-}
-.imagenPoke{
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 10px;
-    border: 1px solid rgb(150, 80, 196);
-    margin-left: 30px;
-    margin-right: 20px;
-}
-.textD{
-    flex-direction: column;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-    margin-right: 40px;
-    margin-left: 40px;
-   color: aqua;
-}
-.tipos{
-    color: green;
-}
-.tiposPoke{
-    margin-left: 5px;
-    margin-right: 10px;
-    color: rgb(32, 163, 108);
-}*/
-
 .div{
     display: flex;
     width: 100vw;
@@ -71,7 +23,7 @@
     align-content: center;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(144,238,144);
+    background-color: #EEEEEE;
     flex-wrap:wrap;
     overflow: hidden;
     border: 2px solid black ;
@@ -109,7 +61,7 @@
     display: flex;
     width: 8rem;
     height: 2rem;
-    background-color: rgb(144,238,144);
+    background-color: #dc4f3d;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -122,9 +74,10 @@
 .link:hover{
     transition: 0.4s;
     text-decoration: none;
-    background-color: #5dc1cf;
-    color: white;
-    border: 2.5px solid white;
+    color: #03045e;
+    background-color: #ffb703;
+    cursor: pointer;
+    border: 2px solid #03045e;
 }
 .btn{
     background-color: transparent;
