--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -2,7 +2,7 @@
     display: flex;
     /* width: 100vw;
     height: 100vh; */
-    background: url('../../Assets/Images/BG-Home.jpg');
+    background: url('../../Assets/Images/pokemon-trophy-in-the-grass-wallpaper.jpg');
     background-size: 100vw 100vh;
     background-repeat: repeat-y;
     background-attachment: fixed;
@@ -17,18 +17,28 @@
     width: 85vw;
 }
 .h1h{
-    /* margin-right: 4rem; */
-    font-family: 'Londrina Solid', cursive;
-    font-weight: 300;
-    background-color: rgb(144,238,144);
-    border-radius: 0.3rem;
-    align-items: center;
-    align-content: center;
+    text-decoration: none;
+    color: black;
+    width: 6rem;
+    text-transform: uppercase;
+    background-color: #dc4f3d;
+    background-size: 4rem 6rem;
+    border-radius: 50px;
+    /* align-items: center;
+    align-content: center; */
     border: 1px solid black;
 }
+.h1h:hover{
+    transition: 0.4s;
+    text-decoration: none;
+    color: #03045e;
+    background-color: #ffb703;
+    cursor: pointer;
+    border: 2px solid #03045e;
+}
 .img{
-    margin-left: 4rem;
-    margin-right: 4rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
 }
 .createLink{
     text-decoration: none;
@@ -37,30 +47,24 @@
     text-transform: uppercase;
     /* text-size-adjust: 0.58; */
     background-size: 4rem 6rem;
-    background-color: rgb(144,238,144);
-    border-radius: 0.3rem;
+    background-color: #dc4f3d;
+    border-radius: 50px;
     /* margin-left: 4rem; */
     border: 1px solid black;
 }
 .createLink:hover{
     transition: 0.4s;
     text-decoration: none;
-    background-color: #5dc1cf;
-    color: white;
-    border: 2.5px solid white;
+    color: #03045e;
+    background-color: #ffb703;
+    cursor: pointer;
+    border: 2px solid #03045e;
 }
 .btn{
     height: 20px;
     width: 80px;
 }
 .card{
-    /* max-width:90vw ;
-    max-height: 100vh;
-    /*display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    /* grid-template-columns: auto auto auto auto; */
-    /*flex-direction: row; */
     height: 50rem;
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -81,7 +85,7 @@
     flex-wrap:wrap;
     overflow: hidden;
     display: flex;
-    background-color: white;
+    background-color: transparent;
     width: 50%;
     height: 6rem;
     justify-content: center;
@@ -98,7 +102,7 @@
     display: flex;
     flex-wrap:wrap;
     overflow: hidden;
-    background-color: rgb(144,238,144);
+    background-color: transparent;
     border: 1px solid black;
     width: 50%;
     height: 6rem;
@@ -116,13 +120,6 @@
     display: flex;
     /* margin-right: 4rem; */
 }
-/* .paginatedYCard{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 2.5rem ;
-    flex-flow: column wrap;
-} */
 .divSelector{
     display: flex;
 }
@@ -137,6 +134,7 @@
 }
 .select{
     display: flex;
+    background-color: #EEEEEE;
     /* margin-right: 3rem; */
 }
 .btnImg{
@@ -147,13 +145,6 @@
 .linkH1{
     text-decoration: none;
     color: black;
-}
-.h1h:hover{
-    transition: 0.4s;
-    text-decoration: none;
-    background-color: #5dc1cf;
-    color: white;
-    border: 2.5px solid white;
 }
 .load{
     background-color: rgb(144,238,144);
@@ -180,14 +171,6 @@
         flex-wrap: wrap;
     }
     .card{
-    /* max-width:90vw ;
-    max-height: 100vh;
-    /*display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    /* grid-template-columns: auto auto auto auto; */
-    /*gap: 10px;
-    flex-direction: row; */
     grid-template-columns: auto auto auto auto;
     margin-top: 1rem; 
     margin-bottom: 2rem;
@@ -261,10 +244,6 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    /* border-bottom-left-radius: 1rem;
-    position: fixed;
-    z-index: 100;
-    margin-top: 0.5rem; */
 }
 .searchbar{
     display: flex;
