--- a/client/src/components/Pagination/Pagination.module.css
+++ b/client/src/components/Pagination/Pagination.module.css
@@ -32,7 +32,7 @@
     text-decoration: none;
     border: 1px solid white;
     border-radius: 0.3rem;
-    background-color:#EEEEEE;
+    background-color:#dc4f3d;
     text-shadow: 1px 0 0 #fff, -1px 0 0 #fff,
    0 1px 0 #fff, 0 -1px 0 #fff, 1px 1px 0 #fff, -1px -1px 0 #fff,
    -1px 1px 0 #fff, 1px -1px 0 #fff;
@@ -60,5 +60,5 @@
     transition: background-color .8s;
     background-color: #dc4f3d;
     color: white;
-    border: 1.5px solid white;
+    border: 1.5px solid rgb(255, 255, 255);
 }
